--- a/SpaceX/Home/UpcomingCollectionViewCell.xib
+++ b/SpaceX/Home/UpcomingCollectionViewCell.xib
@@ -17,20 +17,45 @@
                 <rect key="frame" x="0.0" y="0.0" width="301" height="203"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SyH-Fa-Goe">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SyH-Fa-Goe">
                         <rect key="frame" x="0.0" y="0.0" width="301" height="203"/>
                     </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="A1z-Ip-als">
+                        <rect key="frame" x="0.0" y="150" width="301" height="53"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Cg-W1-IRs" userLabel="upcomingCellNameLabel">
+                                <rect key="frame" x="0.0" y="0.0" width="301" height="32.666666666666664"/>
+                                <color key="backgroundColor" white="1" alpha="0.2993488438082057" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JMa-cF-Gmo" userLabel="upcomingCellDateLabel">
+                                <rect key="frame" x="0.0" y="32.666666666666657" width="301" height="20.333333333333329"/>
+                                <color key="backgroundColor" white="1" alpha="0.31009406285570157" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailing" secondItem="A1z-Ip-als" secondAttribute="trailing" id="0Mg-gs-flg"/>
                     <constraint firstAttribute="bottom" secondItem="SyH-Fa-Goe" secondAttribute="bottom" id="92O-Rt-3dH"/>
+                    <constraint firstItem="A1z-Ip-als" firstAttribute="leading" secondItem="0RM-g0-iSv" secondAttribute="leading" id="CMP-HL-eD3"/>
+                    <constraint firstItem="A1z-Ip-als" firstAttribute="top" secondItem="0RM-g0-iSv" secondAttribute="top" constant="150" id="ZiO-ge-m6E"/>
                     <constraint firstAttribute="trailing" secondItem="SyH-Fa-Goe" secondAttribute="trailing" id="a74-ov-nN3"/>
                     <constraint firstItem="SyH-Fa-Goe" firstAttribute="leading" secondItem="0RM-g0-iSv" secondAttribute="leading" id="hpt-2s-MrU"/>
+                    <constraint firstAttribute="bottom" secondItem="A1z-Ip-als" secondAttribute="bottom" id="oQ8-eP-58p"/>
                     <constraint firstItem="SyH-Fa-Goe" firstAttribute="top" secondItem="0RM-g0-iSv" secondAttribute="top" id="r0U-TS-Xau"/>
                 </constraints>
             </collectionViewCellContentView>
             <size key="customSize" width="301" height="203"/>
             <connections>
                 <outlet property="imageView" destination="SyH-Fa-Goe" id="g64-eq-zs1"/>
+                <outlet property="upcomingCellDateLabel" destination="JMa-cF-Gmo" id="xSD-xv-LS4"/>
+                <outlet property="upcomingCellNameLabel" destination="0Cg-W1-IRs" id="SMZ-Qd-Z8A"/>
             </connections>
             <point key="canvasLocation" x="266.92307692307691" y="43.009478672985779"/>
         </collectionViewCell>
